crates/cli/src/snapshots/sanic_review__tui__tests__a_archives_and_capital_a_shows_archived_prs.snap
---
source: crates/cli/src/tui.rs
expression: "draw(&mut app, 80, 24).backend()"
---
"┌ Reviews you owe (5) ─────────────────────────────────────────────────────────┐"
"│drafted        3 drafts https://github.com/org/api/pull/481  Retry webhook del│"
"│skipped: title          https://github.com/org/api/pull/490  build(deps): bump│"
"│queued                  https://github.com/org/web/pull/77  Fix login flake (b│"
"│waiting 1:40            https://github.com/org/web/pull/78  Bump serde (dana) │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Your PRs (3) ────────────────────────────────────────────────────────────────┐"
"│archived                https://github.com/org/api/pull/470  Speed up search  │"
"│waiting                 https://github.com/org/web/pull/80  [draft] New settin│"
"│archived                https://github.com/org/web/pull/60  Abandoned experime│"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Activity ────────────────────────────────────────────────────────────────────┐"
"│16:36:00  review crashed    https://github.com/org/web/pull/79  index out of b│"
"│16:35:10  review drafted    https://github.com/org/api/pull/481               │"
"│16:33:02  review started    https://github.com/org/api/pull/481               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Log ─────────────────────────────────────────────────────────────────────────┐"
"│16:33:00  INFO watching GitHub user=me                                        │"
"│16:35:10  INFO refresh{url=https://github.com/org/api/pull/481}: summary      │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" showing archived PRs                                                           "
