crates/cli/src/snapshots/sanic_review__tui__tests__c_asks_before_cancelling_and_y_sends_it.snap
---
source: crates/cli/src/tui.rs
expression: "draw(&mut app, 80, 24).backend()"
---
"┌ Reviews you owe (5) ─────────────────────────────────────────────────────────┐"
"│approved  drafted        ✎3  https://github.com/org/api/pull/481  Retry webhoo│"
"│—         skipped: title     https://github.com/org/api/pull/490  build(deps):│"
"│2 new     queued             https://github.com/org/web/pull/77  Fix login fla│"
"│—         waiting 1:40       https://github.com/org/web/pull/78  Bump serde (d│"
"│—         crashed            https://github.com/org/web/pull/79  Cache avatars│"
"│                         index out of bounds                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Your PRs (2 · 1 archived) ───────────────────────────────────────────────────┐"
"│changes ┌ Queue ─────────────────────────────────────────────────────┐rch     │"
"│mergeabl│  ▶ https://github.com/org/api/pull/470  running            │ettings │"
"└────────│  1 https://github.com/org/api/pull/481  queued             │────────┘"
"┌ Activit│  2 https://github.com/org/api/pull/482  queued             │────────┐"
"│16:36:00│                                                            │out of b│"
"│16:35:10│ y cancels this run · any other key keeps it                │        │"
"│16:33:02└────────────────────────────────────────────────────────────┘        │"
"│16:33:01  review requested  https://github.com/org/api/pull/481               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Log ─────────────────────────────────────────────────────────────────────────┐"
"│16:33:00  INFO watching GitHub user=me                                        │"
"│16:35:10  INFO refresh{url=https://github.com/org/api/pull/481}: summary      │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" ? help · o dashboard · q quit          1 queued · 0 running · 3 pending drafts "
