crates/cli/src/snapshots/sanic_review__tui__tests__empty_panes_say_so.snap
---
source: crates/cli/src/tui.rs
expression: "draw(&mut app, 80, 16).backend()"
---
"┌ Reviews you owe (0) ─────────────────────────────────────────────────────────┐"
"│No reviews requested.                                                         │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Your PRs (0) ────────────────────────────────────────────────────────────────┐"
"│No open PRs of yours.                                                         │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Activity ────────────────────────────────────────────────────────────────────┐"
"│Nothing yet.                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Log ─────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" ? help · q quit                        0 queued · 0 running · 0 pending drafts "
