crates/cli/src/snapshots/sanic_review__tui__tests__held_reviews_and_help_overlay.snap
---
source: crates/cli/src/tui.rs
expression: "draw(&mut app, 80, 24).backend()"
---
"┌ Reviews you owe (4) ─────────────────────────────────────────────────────────┐"
"│drafted        3 drafts https://github.com/org/api/pull/481  Retry webhook del│"
"│held                    https://github.com/org/web/pull/77  Fix login flake (b│"
"│waiting 1:40            https://github.com/org/web/pull/78  Bump serde (dana) │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Your PRs (2) ────────────────────────────────────────────────────────────────┐"
"│changes ┌ Keys ──────────────────────────────────────────────────────┐search  │"
"│waiting │ q, Ctrl-C       quit serve                                 │w settin│"
"│        │ Tab, Shift-Tab  next, previous pane                        │        │"
"│        │ j/k, Down/Up    move in the pane                           │        │"
"└────────│ g/G, Home/End   first, last row                            │────────┘"
"┌ Activit│ r               rerun a failed or crashed review           │────────┐"
"│16:36:00│ ?, Esc          close this help                            │out of b│"
"│16:35:10│                                                            │        │"
"│16:33:02│ Drafts are edited and submitted in the dashboard.          │        │"
"└────────└────────────────────────────────────────────────────────────┘────────┘"
"┌ Log ─────────────────────────────────────────────────────────────────────────┐"
"│16:33:00  INFO watching GitHub user=me                                        │"
"│16:35:10  INFO refresh{url=https://github.com/org/api/pull/481}: summary      │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" ? help · q quit         reviews held · 1 queued · 0 running · 3 pending drafts "
