crates/cli/src/snapshots/sanic_review__tui__tests__i_edits_a_title_glob_and_picks_where_it_goes.snap
---
source: crates/cli/src/tui.rs
expression: "draw(&mut app, 80, 24).backend()"
---
"┌ Reviews you owe (5) ─────────────────────────────────────────────────────────┐"
"│a┌ Ignore by title ─────────────────────────────────────────────────────────┐o│"
"│—│┌ Title ─────────────────────────────────────────────────────────────────┐│:│"
"│2││build(deps): bump tokio                                                 ││a│"
"│—│└────────────────────────────────────────────────────────────────────────┘│d│"
"│—│┌ Description ───────────────────────────────────────────────────────────┐│s│"
"│ ││build(deps): bump tokio, in detail.                                     ││ │"
"└─││                                                                        ││─┘"
"┌ ││                                                                        ││─┐"
"│c││                                                                        ││ │"
"│m││                                                                        ││ │"
"└─│└────────────────────────────────────────────────────────────────────────┘│─┘"
"┌ │┌ Pattern ───────────────────────────────────────────────────────────────┐│─┐"
"│1││build(deps)*▏                                                           ││b│"
"│1│└────────────────────────────────────────────────────────────────────────┘│ │"
"│1│┌ Would skip (1) ────────────────────────────────────────────────────────┐│ │"
"│1││https://github.com/org/api/pull/490  build(deps): bump tokio            ││ │"
"└─││                                                                        ││─┘"
"┌ ││                                                                        ││─┐"
"│1││                                                                        ││ │"
"│1│└────────────────────────────────────────────────────────────────────────┘│ │"
"│ │ Enter save · Esc cancel · ↑/↓ scroll description                         │ │"
"└─└──────────────────────────────────────────────────────────────────────────┘─┘"
" ? help · o dashboard · q quit          1 queued · 0 running · 3 pending drafts "
