crates/cli/src/snapshots/sanic_review__tui__tests__ignore_target.snap
---
source: crates/cli/src/tui.rs
expression: "draw(&mut app, 80, 24).backend()"
---
"┌ Reviews you owe (5) ─────────────────────────────────────────────────────────┐"
"│a┌ Ignore by title ─────────────────────────────────────────────────────────┐o│"
"│—│┌ Title ─────────────────────────────────────────────────────────────────┐│:│"
"│2││build(deps): bump tokio                                                 ││a│"
"│—│└────────────────────────────────────────────────────────────────────────┘│d│"
"└─│┌ Description ───────────────────────────────────────────────────────────┐│─┘"
"┌ ││build(deps): bump tokio, in detail.                                     ││─┐"
"│c││                                                                        ││ │"
"│m││                                                                        ││ │"
"│ ││        ┌ Add `build(deps)*` to ───────────────────────────────┐        ││ │"
"│ ││        │ [review_requests]: every profile                     │        ││ │"
"└─│└────────│ [profile.default]                                    │────────┘│─┘"
"┌ │┌ Pattern│ [profile.ring]                                       │────────┐│─┐"
"│1││build(de│                                                      │        ││b│"
"│1│└────────│ Enter choose · Esc cancel                            │────────┘│ │"
"│1│┌ Would s└──────────────────────────────────────────────────────┘────────┐│ │"
"└─││https://github.com/org/api/pull/490  build(deps): bump tokio            ││─┘"
"┌ ││                                                                        ││─┐"
"│1││                                                                        ││ │"
"│1││                                                                        ││ │"
"│ │└────────────────────────────────────────────────────────────────────────┘│ │"
"│ │ Enter save · Esc cancel · ↑/↓ scroll description · Ctrl-U clear          │ │"
"└─└──────────────────────────────────────────────────────────────────────────┘─┘"
" ? help · q quit                        1 queued · 0 running · 3 pending drafts "
