crates/cli/src/snapshots/sanic_review__tui__tests__m_switches_manual_reviews_asking_first_when_held_ones_would_start.snap
---
source: crates/cli/src/tui.rs
expression: "draw(&mut manual, 80, 24).backend()"
---
"┌ Reviews you owe (5) ─────────────────────────────────────────────────────────┐"
"│approved  drafted        ✎3  https://github.com/org/api/pull/481  Retry webhoo│"
"│—         skipped: title     https://github.com/org/api/pull/490  build(deps):│"
"│2 new     held               https://github.com/org/web/pull/77  Fix login fla│"
"│—         waiting 1:40       https://github.com/org/web/pull/78  Bump serde (d│"
"│—         crashed            https://github.com/org/web/pull/79  Cache avatars│"
"│                         index out of bounds                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Your PRs (2 · 1 archived) ───────────────────────────────────────────────────┐"
"│changes ┌ Manual reviews off? ───────────────────────────────────────┐rch     │"
"│mergeabl│ 1 held review will start. Continue?                        │ettings │"
"└────────│ Turning manual reviews off runs what's queued by itself,   │────────┘"
"┌ Activit│ runner.max_concurrent at a time. This spends tokens.       │────────┐"
"│16:36:00│                                                            │out of b│"
"│16:35:10│ y turn them off · any other key cancels                    │        │"
"│16:33:02└────────────────────────────────────────────────────────────┘        │"
"│16:33:01  review requested  https://github.com/org/api/pull/481               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Log ─────────────────────────────────────────────────────────────────────────┐"
"│16:33:00  INFO watching GitHub user=me                                        │"
"│16:35:10  INFO refresh{url=https://github.com/org/api/pull/481}: summary      │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" ? help · q quit       manual reviews · 1 queued · 0 running · 3 pending drafts "
