crates/cli/src/snapshots/sanic_review__tui__tests__manual_reviews_hold_and_help_overlay.snap
---
source: crates/cli/src/tui.rs
assertion_line: 2033
expression: "draw(&mut app, 80, 24).backend()"
---
"┌ Reviews you owe (5) ─────────────────────────────────────────────────────────┐"
"│approved  drafted        ✎3  https://github.com/org/api/pull/481  Retry webhoo│"
"│—       ┌ Keys ──────────────────────────────────────────────────────┐d(deps):│"
"│2 new   │ q, Ctrl-C       quit serve                                 │ogin fla│"
"│—       │ Tab, Shift-Tab  next, previous pane                        │serde (d│"
"│—       │ w/p/a/l         jump to owed, yours, activity, log         │ avatars│"
"│        │ z               pane size: fit, full screen, collapsed     │        │"
"└────────│ Z               every pane back to fit                     │────────┘"
"┌ Your PR│ j/k, Down/Up    move in the pane                           │────────┐"
"│changes │ g/G, Home/End   first, last row                            │rch     │"
"│mergeabl│ r               review now: failed, held or skipped        │ettings │"
"└────────│ x               archive or unarchive the selected PR       │────────┘"
"┌ Activit│ X               show or hide archived PRs                  │────────┐"
"│16:36:00│ i               skip PRs with titles like the selected one │out of b│"
"│16:35:10│ m               turn manual reviews on or off              │        │"
"│16:33:02│ e               edit the config                            │        │"
"│16:33:01│ c               chat with the agent that reviewed it       │        │"
"└────────│ o               open it in the dashboard, or the index     │────────┘"
"┌ Log ───│ Q               the run queue: K/J reorder, c cancels      │────────┐"
"│16:33:00│ ?, Esc          close this help                            │        │"
"│16:35:10│                                                            │ry      │"
"│        │ Drafts are edited and submitted in the dashboard.          │        │"
"└────────└────────────────────────────────────────────────────────────┘────────┘"
" ? help · q quit       manual reviews · 1 queued · 0 running · 3 pending drafts "
